2006-08-07	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/exo-die-desktop-model.c
	  (exo_die_desktop_item_new_from_file): Load only .desktop files of
	  type Application.

2006-08-06	Benedikt Meurer <benny@xfce.org>

	* exo-desktop-item-edit/exo-die-command-entry.c,
	  exo-desktop-item-edit/exo-die-command-model.c: Set the completion
	  model only after the command model is loaded, as GtkEntryCompletion
	  in GTK+ 2.10 is way to slow when adding rows to a model, which makes
	  the dialog hang for several seconds on startup.
	* exo-desktop-item-edit/exo-die-desktop-model.{c,h},
	  exo-desktop-item-edit/Makefile.am, exo-desktop-item-edit/main.c,
	  exo-desktop-item-edit/exo-die-editor.c: Add a convenient way to
	  create launchers for applications installed on the system and
	  available via the desktop database, by typing the name of the
	  application in the "Name" field and using the available completion.
	* po/POTFILES.in: Add new files here.
	* po/libexo-0.3.pot, po/*.po: Updated.
	* po/de.po: Update german translations.

2006-07-28	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(ExoIconViewItem): Apply patch from Matt McClinch 
	  <mattmcclinch@gmail.com> to fix invalid size for row and col.

2006-07-26	Benedikt Meurer <benny@xfce.org>

	* exo/exo-xsession-client.c(exo_xsession_client_set_group): Use the
	  stack to allocate the temporary custom protocols.
	* exo/exo-private.h: Add support macros for the slice allocator.
	* exo/exo-binding.c, exo/exo-icon-bar.c, exo/exo-icon-view.c,
	  exo/exo-md5.c, exo/exo-toolbars-model.c: Use the slice allocator
	  to reduce memory overhead where possible.

2006-07-09	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-07-09	Benedikt Meurer <benny@xfce.org>

	* === Released 0.3.1.8beta2 ===
	* NEWS, configure.in.in: Bump version.
	* THANKS: Add missing translator credits.
	* po/*.po: Update Project-Id-Version.
	* exo.spec.in: Add missing files.
