@@ -1,3 +1,8 @@
+2006-08-09	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-tree-view.c: Add support for rubberband selection in the
+	  ExoTreeView class. Bug #1996.
+
 2006-08-07	Benedikt Meurer <benny@xfce.org>
 
 	* exo-desktop-item-edit/exo-die-desktop-model.c
